--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyCache">
         <activity
-            android:name=".MainActivity"
+            android:name=".ImpactActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditBudgetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DashboardActivity"
             android:exported="false" />
     </application>
 
